force-app/main/default/objects/Retail_Purchase_History__c/Retail_Purchase_History__c.object-meta.xml
<CustomObject>
    <label>Retail Purchase History</label>
    <nameField>
        <displayFormat>RPH-{0000}</displayFormat>
        <label>Retail Purchase History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Purchase History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>