force-app/main/default/objects/Retail_Purchase_History__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Number</label>
    <referenceTo>Retail_Invoice__c</referenceTo>
    <relationshipLabel>Retail Purchase History</relationshipLabel>
    <relationshipName>Retail_Purchase_History</relationshipName>
    <type>Lookup</type>
</CustomField>