force-app/main/default/objects/Retail_Purchase_History__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipLabel>Retail Purchase History</relationshipLabel>
    <relationshipName>Retail_Purchase_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>