force-app/main/default/objects/Retail_Purchase_History__c/fields/Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price__c</fullName>
    <label>Selling Price</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>