force-app/main/default/objects/Retail_Purchase_History__c/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure__c</fullName>
    <label>Unit Of Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>